--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectKien500k</string>
+    <string name="app_name">piedu</string>
     <string name="title_home">Trang chủ</string>
     <string name="title_dashboard">Danh mục</string>
     <string name="title_notifications">thông báo</string>
